--- a/src/pages/Registration/RegistrationPage.css
+++ b/src/pages/Registration/RegistrationPage.css
@@ -172,3 +172,51 @@
 .register-submit-btn:hover {
   background-color: #218838;
 }
+
+
+/* popup */
+
+/* Overlay background for popup */
+.popup-overlay {
+  position: fixed;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+/* Popup box style */
+.popup-box {
+background-color: #FFF0E8;
+    color: var(--primarycolor);
+    /* padding: 20px 30px; */
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(177, 177, 177, 79%);
+    max-width: 497px;
+    width: 82%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+.popup-box p{
+  border-bottom: 2px solid grey;
+  padding: 20px;
+}
+
+/* Close button */
+.close-btn {
+  margin: 15px;
+  padding: 8px 16px;
+  background-color: #ec4899;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+      align-self: flex-end;
+}
+
+.close-btn:hover {
+  background-color: #db2777;
+}
