--- a/src/pages/Auth/auth.css
+++ b/src/pages/Auth/auth.css
@@ -8,6 +8,12 @@
   margin-top: 1rem;
   text-align: center;
 }
+.signup-wrapper{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
 .signup-wrapper h1{
    margin-bottom: 40px;
@@ -20,7 +26,7 @@
   border-radius: 12px;
   color: #fff;
   box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      width: clamp(296px, 79%, 916px);
+      width: clamp(226px, 79%, 916px);
 }
 
 .signup-form {
@@ -116,6 +122,7 @@
 
 .image-carousel img{
 width:464px;
+  width: clamp(220px, 80vw, 450px);
 }
 
 
