--- a/src/pages/Auth/auth.css
+++ b/src/pages/Auth/auth.css
@@ -174,6 +174,29 @@ width:464px;
 }
 
 
+
+
+.error-message {
+  color: #ff4d4f;
+  margin-top: 0.5rem;
+  text-align: center;
+  font-size: 0.9rem;
+}
+
+.success-message {
+  color: #4caf50;
+  margin-top: 0.5rem;
+  text-align: center;
+  font-size: 0.9rem;
+}
+
+.signup-button[disabled] {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+
+
 /* Login */
 /* General layout */
 .login-container {
@@ -183,6 +206,10 @@ width:464px;
   align-items: center;
   justify-content: center;
   padding: 1rem;
+  background-image: url("../../images//loginbg.png");
+      background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 /* Content Wrapper */
