--- a/src/pages/Globalflex/globalflex.css
+++ b/src/pages/Globalflex/globalflex.css
@@ -348,7 +348,7 @@ align-items: center;
   margin-top: 7%;
 }
 
-.header {
+.global-header {
     background-color: #463066;
     color: white;
     padding: 2rem;
@@ -360,17 +360,17 @@ align-items: center;
     background-size: cover;
 }
 
-.header h2 {
+.global-header h2 {
   margin: 0;
   font-size: 28px;
 }
 
-.header p {
+.global-header p {
   margin-top: 0.5rem;
   font-size: 14px;
 }
 
-.form-box {
+.global-formbox {
   background-color: #F3E4DD; /* light green */
   max-width: 800px;
     margin: -20% auto 2rem;
@@ -379,21 +379,21 @@ align-items: center;
   box-shadow: 0 0 12px rgba(0, 0, 0, 0.05);
 }
 
-.form-box h3 {
+.global-formbox h3 {
   margin-bottom: 1.5rem;
 }
 
-form label {
+.global-form label {
   font-weight: bold;
   display: block;
   margin-bottom: 6px;
   color: #62208F;
 }
 
-form input[type="text"],
-form input[type="email"],
-form select,
-form textarea {
+.global-form input[type="text"],
+.global-form input[type="email"],
+.global-form select,
+.global-form textarea {
   width:95%;
   padding: 10px;
   margin-bottom: 1rem;
@@ -404,13 +404,13 @@ form textarea {
  
 }
 
-.form-row {
+.global-formrow {
   display: flex;
   gap: 1rem;
   flex-wrap: wrap;
 }
 
-.form-row > div {
+.global-formrow > div {
   flex: 1;
   min-width: 200px;
 }
